--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "numeral": "^2.0.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.8.1"
+    "react-navigation": "^3.8.1",
+    "react-redux": "6.0.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
